--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,9 @@
       android:versionName="0.1" package="com.wiegandfamily.portscan">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".ScanConfig"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name"
+                  android:screenOrientation="landscape"
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
