--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      package="com.wiegandfamily.portscan" android:versionName="0.2">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+      package="com.wiegandfamily.portscan" android:versionName="0.3" android:versionCode="3">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
         <activity android:name=".ScanConfig"
                   android:label="@string/app_name"
                   android:screenOrientation="landscape"
@@ -15,4 +14,5 @@
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
 </manifest> 
