--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.wiegandfamily.portscan" android:versionName="0.3" android:versionCode="3">
+      package="com.wiegandfamily.portscan" android:versionName="0.4" android:versionCode="4">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
         <activity android:name=".ScanConfig"
                   android:label="@string/app_name"
-                  android:screenOrientation="landscape"
                   >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ScanResults"></activity>
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
