--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.wiegandfamily.portscan" android:versionName="0.4" android:versionCode="4">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+      package="com.wiegandfamily.portscan" android:versionName="0.6" android:versionCode="6">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
         <activity android:name=".ScanConfig"
                   android:label="@string/app_name"
                   >
@@ -11,6 +11,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".ScanResults"></activity>
+        <activity android:name=".PrefsConfig"></activity>
     </application>
     <uses-sdk android:minSdkVersion="3" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
