--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.wiegandfamily.portscan" android:versionName="1.02" android:versionCode="14">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
+      package="com.wiegandfamily.portscan" android:versionName="1.04a" android:versionCode="17">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" 
+    android:debuggable="false">
         <activity android:name=".ScanConfig"
                   android:label="@string/app_name"
                   >
@@ -13,7 +14,7 @@
         <activity android:name=".ScanResults"></activity>
         <activity android:name=".PrefsConfig"></activity>
     </application>
-    <uses-sdk android:minSdkVersion="3" />
+    <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 </manifest> 
