--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.wiegandfamily.portscan" android:versionName="1.04a" android:versionCode="17">
+      package="com.wiegandfamily.portscan" android:versionName="1.1" android:versionCode="19">
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
     android:debuggable="false">
         <activity android:name=".ScanConfig"
                   android:label="@string/app_name"
-                  >
+                  android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ScanResults"></activity>
+        <activity android:name=".ScanResults" android:configChanges="orientation"></activity>
         <activity android:name=".PrefsConfig"></activity>
     </application>
     <uses-sdk android:minSdkVersion="4" />
