--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,4 +17,6 @@
     <uses-sdk android:minSdkVersion="4" />
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
+	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
+	<uses-feature android:name="android.hardware.wifi" android:required="true" />
 </manifest> 
