--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.wiegandfamily.portscan" android:versionName="1.1" android:versionCode="19">
+      package="com.wiegandfamily.portscan" android:versionName="1.2" android:versionCode="20">
     <application android:icon="@drawable/icon" android:label="@string/app_name" 
     android:debuggable="false">
         <activity android:name=".ScanConfig"
@@ -18,5 +18,5 @@
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
 	<uses-feature android:name="android.hardware.touchscreen" android:required="false" />
-	<uses-feature android:name="android.hardware.wifi" android:required="true" />
+	<uses-feature android:name="android.hardware.wifi" android:required="false" />
 </manifest> 
